# parsec-cloud

./: .appveyor.yml  .azure-pipelines.yml  .babel.cfg  .ecrc  .editorconfig  .env  .gitattributes  .gitignore  .isort.cfg  .landscape.yml  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .ruff.toml  .syft.yaml  .taplo.toml  .travis.yml  .yamllint.yml  987.feature.rst  ANALYSE_MISE_A_JOUR_STRIPE.md  AUTHORS  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Cargo.toml  Cross.toml  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  README.rst  SConstruct  SECURITY.md  STRIPE_UPGRADE_ANALYSIS.md  bdb.py  build.py  client_config.py  (+19 more)
bindings/electron/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
bindings/python/: .gitignore  Cargo.toml  libparsec.pyi  pyproject.toml
bindings/web/: Cargo.toml  README.md  package-lock.json  package.json
cli/: Cargo.toml  README.md  build.rs  run_testenv.bat  run_testenv.fish  run_testenv.sh
cli/benches/: minimal_short_id.rs
cli/src/: bootstrap_organization.rs  cancel_invitation.rs  claim_invitation.rs  create_organization.rs  create_workspace.rs  export_recovery_device.rs  greet_invitation.rs  import_recovery_device.rs  invite_device.rs  invite_user.rs  lib.rs  list_devices.rs  list_invitations.rs  list_users.rs  list_workspaces.rs  ls.rs  macro_opts.rs  macros.rs  main.rs  remove_device.rs  run_testenv.rs  shamir_setup.rs  share_workspace.rs  stats_organization.rs  stats_server.rs  status_organization.rs  testenv_utils.rs  tests.rs  utils.rs
docs/: Dockerfile  HOSTING.md  Makefile  README.md  architecture.rst  conf.py  cryptography.rst  development.rst  functional_architecture.rst  history.rst  hosting_server.rst  index.rst  installation.rst  introduction.rst  make.bat  pyproject.toml  realm_export.md  requirements.txt  roles.rst  usage.rst
docs/_static/: parsec_theme.css
docs/adminguide/: freeze_users.rst  frozen_users.rst  index.rst  installation.rst  stats_organization.rst  stats_server.rst
docs/cli/: cheat_sheet.rst  device.rst  first-steps.rst  first_steps.rst  install-cli.rst  install_cli.rst  introduction.rst  invite.rst  user.rst  workspace.rst
docs/development/: README.md  design-functional-architecture.md  functional_architecture.md  functional_architecture.rst  generate_blob.md  glossary-EN.md  glossary-FR.md  glossary.md  guide-release-parsec.md  how-to-add-a-rpc-cmd.md  how-to-add-a-type-with-bindings.md  how-to-debug-github-actions.md  how-to-generate-blob.md  how-to-log-with-sentry.md  how-to-simple-benchmark.md  how-to-use-shared-recovery.md  how-to-write-sql-queries.md  how_to_add_a_route.md  how_to_add_a_rpc_cmd.md  index.rst  merging-process.md  quickstart.md  quickstart.rst  release.md  release.rst  sequester-test-guide.md  simple_benchmark.md  snapcraft-101.md  styleguide.rst  translation_memory.md  workflow_graph.rst  workspace-file-system-architecture.md
docs/hosting/: architecture.rst  client-deploy.rst  client_deploy.rst  custom-branding.rst  custom_branding.rst  custom_en-US.json  custom_fr-FR.json  install-cli.rst  install_cli.rst  introduction.rst
docs/rfcs/: 0000-how-to-write-rfcs.md  0000-rfc-template.md  0000-simple-user-facing-token.md  0999-old-issue-to-rfc.md  1000-shamir-based-recovery.md  1001-update-user-profile.md  1002-automatic-user-revoke.md  1002-workspace-archiving-and-deletion.md  1003-mandatory-human-handle.md  1004-topic-based-certificates.md  1005-realm-key-rotation.md  1006-upgradable-encryption-algorithm.md  1007-frozen-users.md  1007-sequester-service-certificate-with-signature-key-size.md  1008-nightly-build.md  1009-hexstring-format.md  1010-first-remote-device-storage.md  1011-non-blocking-invite-transport.md  1012-parsec-auth.md  1012-workspace-mountpoint-integration.md  1013-parsec-account.md  1013-parsec-auth-scheme.md  1014-account-vault-for-device-stored-on-server.md  1014-parsec-auth-scheme.md  1015-auto-enrollment-device.md  1015-registration-device.md  1016-local-device-storage-in-web-client.md  1017-web-client-allowed-on-per-org-basis.md  1018-server-stored-device-keys.md  1019-deprecate-local-device-user-realm-field.md  1020-collaborative-edition.md  1020-pki-support.md  1021-sso-openbao-device-storage.md  1022-pki-device-storage.md  1022-server-config-api.md  1023-async-enrollment.md  1023-collaborative-edition.md  1024-pki-device-storage.md  1025-totp-protected-local-device.md  1026-pki-web-idopte-mutual-auth.md  (+8 more)
docs/userguide/: first-steps.rst  first_steps.rst  index.rst  installation.rst  introduction.rst  join_organization.rst  manage-devices.rst  manage-files.rst  manage-organization.rst  manage_devices.rst  manage_files.rst  manage_organization.rst  mfa.rst  new-organization.rst  new_device.rst  new_organization.rst  new_user.rst  parsec-workspaces.rst  parsec_workspaces.rst  recovery_device.rst  revoke_user.rst  security.rst  share_data.rst  troubleshooting.rst  workspace_offline_mode.rst
libparsec/: Cargo.toml  README.md  version
libparsec/src/: account.rs  addr.rs  async_enrollment.rs  cancel.rs  client.rs  config.rs  device.rs  events.rs  handle.rs  invite.rs  lib.rs  openbao.rs  os.rs  path.rs  pki.rs  platform.rs  recovery.rs  testbed.rs  totp.rs  validation.rs  workspace.rs  workspace_history.rs  workspace_history2.rs
oxidation/libparsec/: Cargo.toml
oxidation/libparsec_python/: Cargo.toml  dev-requirements.txt  pyproject.toml
oxidation/parsec_cli/: Cargo.toml
server/: Cargo.toml  README.md  build.py  build.rs  pypi-readme.md  pyproject.toml  setup.cfg  setup.py
server/parsec/: .gitignore  __init__.py  __main__.py  _parsec.pyi  _version.py  api.py  backend.py  ballpark.py  cli.py  cli_utils.py  client_context.py  config.py  email_rate_limit.py  event_bus.py  events.py  joinable_task.py  locks.py  logging.py  monitoring.py  realm_export.py  run.py  sequester_export_reader.py  service_nursery.py  types.py  utils.py  webhooks.py
server/src/: addrs.rs  api_crypto.rs  backend_events.rs  binding_utils.rs  crypto.rs  enumerate.rs  ids.rs  lib.rs  misc.rs  net.rs  protocol.rs  regex.rs  runtime.rs  (+3 more)
(+8378 files in other folders)
