[workspace]
members = [
    "server",
    "libparsec",
    "libparsec/crates/client",
    "libparsec/crates/client_connection",
    "libparsec/crates/crypto",
    "libparsec/crates/platform_async",
    "libparsec/crates/platform_device_loader",
    "libparsec/crates/platform_mountpoint",
    "libparsec/crates/platform_storage",
    "libparsec/crates/protocol",
    "libparsec/crates/serialization_format",
    "libparsec/crates/testbed",
    "libparsec/crates/tests_fixtures",
    "libparsec/crates/tests_lite",
    "libparsec/crates/tests_macros",
    "libparsec/crates/types",
    "bindings/web",
    "bindings/electron",
    "bindings/android/libparsec/rust",
]
# Ignore bindings stuff given they are special snowflakes that require exotic toolchain and dependencies
# The idea is to be able to do `cargo test` from the root and have all the libparsec&co tests run
default-members = [
    "libparsec",
    "libparsec/crates/client",
    "libparsec/crates/client_connection",
    "libparsec/crates/crypto",
    "libparsec/crates/platform_async",
    "libparsec/crates/platform_device_loader",
    "libparsec/crates/platform_mountpoint",
    "libparsec/crates/platform_storage",
    "libparsec/crates/protocol",
    "libparsec/crates/serialization_format",
    "libparsec/crates/testbed",
    "libparsec/crates/tests_fixtures",
    "libparsec/crates/tests_lite",
    "libparsec/crates/tests_macros",
    "libparsec/crates/types",
]

# Define values to be inherited by workspace members.
#
# For a member to inherit a value, it need to set `{key}.workspace = true`.
#
# https://doc.rust-lang.org/cargo/reference/workspaces.html#the-package-table
[workspace.package]
publish = false
authors = [ "@Scille/parsec-dev", "@Scille/rust-code-owners" ]
edition = "2021"
homepage = "https://parsec.cloud"
license = "BUSL-1.1"
version = "0.0.0"
repository = "https://github.com/Scille/parsec-cloud"

# All dependencies should be specified here instead of just in the crate(s) requiring them:
# - It ensures each given dependency version is consistent across all crates
# - It simplifies updating dependency version (only a single place to update)
#
# Note the dependencies are marked `default-features = false`, this is because otherwise
# the default features are always provided (see https://github.com/rust-lang/cargo/issues/8366).
# This means the dependencies must always specify all features they use instead of relying
# on default features... Let's say it's a way to reduce bloat by making the developer
# check the default feature and making sure they are actually needed ;-)
[workspace.dependencies]
libparsec = { path = "libparsec", default-features = false }
libparsec_protocol = { path = "libparsec/crates/protocol", default-features = false }
libparsec_crypto = { path = "libparsec/crates/crypto", default-features = false }
libparsec_types = { path = "libparsec/crates/types", default-features = false }
libparsec_platform_device_loader = { path = "libparsec/crates/platform_device_loader", default-features = false }
libparsec_platform_mountpoint = { path = "libparsec/crates/platform_mountpoint", default-features = false }
libparsec_platform_storage = { path = "libparsec/crates/platform_storage", default-features = false }
libparsec_serialization_format = { path = "libparsec/crates/serialization_format", default-features = false }
libparsec_testbed = { path = "libparsec/crates/testbed", default-features = false }
libparsec_tests_fixtures = { path = "libparsec/crates/tests_fixtures", default-features = false }
libparsec_client_connection = { path = "libparsec/crates/client_connection", default-features = false }
libparsec_platform_async = { path = "libparsec/crates/platform_async", default-features = false }
libparsec_platform_http_proxy = { path = "libparsec/crates/platform_http_proxy", default-features = false }
libparsec_client = { path = "libparsec/crates/client", default-features = false }
libparsec_tests_macros = { path = "libparsec/crates/tests_macros", default-features = false }
libparsec_tests_lite = { path = "libparsec/crates/tests_lite", default-features = false }

# Third parties
android_logger = { version = "0.13", default-features = false }
anyhow = { version = "1.0.75", default-features = false }
argon2 = { version = "0.5.2", default-features = false }
async-lock = { version = "2.8.0", default-features = false }
async-broadcast = { version = "0.5.1", default-features = false }
async-trait = { version = "0.1.74", default-features = false }
base32 = { version = "0.4.0", default-features = false }
base64 = { version = "0.21.4", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
bytes = { version = "1.5.0", default-features = false }
chrono = { version = "0.4.31", default-features = false }
console_error_panic_hook = { version = "=0.1.6", default-features = false }
console_log = { version = "1.0.0", default-features = false }
crc32fast = { version = "1.3.2", default-features = false }
crypto_box = { version = "0.8.2", default-features = false }
crypto_secretbox = { version = "0.1.1", default-features = false }
ctrlc = { version = "3.4.1", default-features = false }
# You need base64&co ? This is the crate you need !
data-encoding = { version = "2.4.0", default-features = false }
diesel = { version = "2.1.3", default-features = false }
digest = { version = "0.10.7", default-features = false }
dirs = { version = "5.0.1", default-features = false }
ed25519-dalek = { version = "1.0.1", default-features = false }
email-address-parser = { version = "2.0.0", default-features = false }
env_logger = { version = "0.10.0", default-features = false }
event-listener = { version = "2.5.3", default-features = false }
eventsource-stream = { version = "0.2.3", default-features = false }
flate2 = { version = "1.0.28", default-features = false }
flume = { version = "0.10.14", default-features = false }
fnmatch-regex = { version = "0.2.0", default-features = false }
fuser = { version = "0.13.0", default-features =  false }
futures-core = { version = "0.3.28", default-features = false }
futures-lite = { version = "1.13.0", default-features = false }
futures = { version = "0.3.28", default-features = false }
generic-array = { version = "0.14.7", default-features = false }
# Two versions of `getrandom` needed in `libparsec_crypto`
getrandom_01 = { package = "getrandom", version = "0.1.16", default-features = false }
getrandom_02 = { package = "getrandom", version = "0.2.10", default-features = false }
glob = { version = "0.3.1", default-features = false }
gloo-timers = { version = "0.3.0", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
hex = { version = "0.4", default-features = false }
instant = { version = "0.1.12", default-features = false }
itertools = { version = "0.11.0", default-features = false }
jni = { version = "0.21.1", default-features = false }
js-sys = { version = "0.3.64", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
libc = { version = "0.2.149", default-features = false }
libsodium-sys = { version = "0.2.7", default-features = false }
libsqlite3-sys = { version = "0.26.0", default-features = false }
log = { version = "0.4.20", default-features = false }
miniserde = { version = "0.1.34", default-features = false }
neon = { version = "0.10", default-features = false }
once_cell = { version = "1.18.0", default-features = false }
openssl = { version = "0.10.57", default-features = false }
paste = { version = "1.0.14", default-features = false }
pin-project-lite = { version = "0.2.13", default-features = false }
percent-encoding = { version = "2.3.0", default-features = false }
pretty_assertions = { version = "1.4.0", default-features = false }
proc-macro2 = { version = "1.0.69", default-features = false }
pyo3 = { version = "0.19.2", default-features = false }
quote = { version = "1.0.33", default-features = false }
# Two versions of `rand` needed in `libparsec_crypto`
rand_07 = { package = "rand", version = "0.7", default-features = false }
rand_08 = { package = "rand", version = "0.8", default-features = false }
rand = { version = "0.8.5", default-features = false }
regex = { version = "1.10.2", default-features = false }
regex-syntax = { version = "0.8.2", default-features = false }
reqwest-eventsource = { version = "0.4.0", default-features = false }
reqwest = { version = "0.11.22", default-features = false }
rmp-serde = { version = "1.1.2", default-features = false }
rsa = { version = "0.8.2", default-features = false }
rstest_reuse = { version = "0.6.0", default-features = false }
rstest = { version = "0.18.2", default-features = false }
serde_bytes = { version = "0.11.12", default-features = false }
serde_json = { version = "1.0.107", default-features = false }
serde_test = { version = "1.0.176", default-features = false }
serde = { version = "1.0.189", default-features = false }
serde_with = { version = "3.4.0", default-features = false }
sha1 = { version = "0.10.6", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
sodiumoxide = { version = "0.2.7", default-features = false }
syn = { version = "2.0.38", default-features = false }
thiserror = { version = "1.0.50", default-features = false }
tokio = { version = "1.33.0", default-features = false }
unicode-normalization = { version = "0.1.22", default-features = false }
url = { version = "2.4.1", default-features = false }
uuid = { version = "1.5.0", default-features = false }
wasm-bindgen-futures = { version = "0.4.37", default-features = false }
wasm-bindgen-test = { version = "0.3.37", default-features = false }
wasm-bindgen = { version = "0.2.87", default-features = false }
web-sys = { version = "0.3.64", default-features = false }
winfsp_build = { version = "0.1.1", default-features = false }
winfsp_wrs = { git = "https://github.com/Scille/winfsp_wrs.git", rev = "d768c7e", default-features = false }
x25519-dalek = { version = "2.0.0", default-features = false }
zeroize = { version = "1.6.0", default-features = false }

# Rust unoptimized code is really slow with crypto algorithm and regex compilation,
# hence we optimize our 3rd party dependencies.
[profile.dev.package."*"]
opt-level = 1

[profile.dev-python]
inherits = "dev"
# We don't optimize our own crates here given it comes with a high impact on
# when doing single change recompilation.

# Custom profiles for the CI. The idea here is to try to save compilation time
# and artifacts size (to keep cache efficient).

[profile.ci-rust]
inherits = "dev"
# Remove debug symbols saves roughly ~30% compilation time and ~50% artifacts size
debug = false
# Given we don't keep our crate in the cache, we always build them from the
# ground. Removing that saves ~20% in artifacts size.
incremental = false

[profile.ci-python]
inherits = "ci-rust"
# Using `opt-level = 0` divides by 2 compilation time, however it makes code run much
# slower which is a no-go for Python tests :'(
opt-level = 1
