[package]
name = "parsec_cli"
publish.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testenv = ["dep:url"]

[dependencies]
libparsec = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["default", "derive"] }
reqwest = { workspace = true, features = ["json"] }
rpassword = { workspace = true }
serde_json = { workspace = true }
spinners = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid = { workspace = true }
url = { workspace = true, optional = true}

[dev-dependencies]
libparsec = { workspace = true, features = ["cli-tests"] }

assert_cmd = { workspace = true }
predicates = { workspace = true, features = ["regex"] }
rstest = { workspace = true }
uuid = { workspace = true, features = ["v6", "std", "rng"] }
