[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "parsec_cli"
publish.workspace = true
repository.workspace = true
version.workspace = true
autotests = false

[[bench]]
name = "minimal_short_id"
harness = false

[features]
testenv = []

[dependencies]
libparsec = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["default", "derive", "env"] }
env_logger = { workspace = true, features = ["auto-color", "humantime", "regex"] }
log = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
rpassword = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
spinners = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
url = { workspace = true, optional = true }
uuid = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
libparsec = { workspace = true, features = ["cli-tests"] }

assert_cmd = { workspace = true }
predicates = { workspace = true, features = ["regex"] }
rstest = { workspace = true }
uuid = { workspace = true, features = ["v6", "std", "rng"] }

criterion = { workspace = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winfsp_wrs_build = { workspace = true }
